--- a/My_Porfolio/src/index.html
+++ b/My_Porfolio/src/index.html
@@ -6,8 +6,14 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/css/tooplate-style.css">
+    <link rel="stylesheet" href="assets/css/unicons.css">
+
   </head>
   <body>
-    <app-root>Hello</app-root>
+    <app-root></app-root>
   </body>
 </html>
