ajustes a html en experiencias labrol y educativa

--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
                 <div class="timeline-info">
                   <h3><span>Vendedor TDC Día Market</span><br>
                     <small>SNW marketing</small></h3>
-                  <p>Fusce rutrum augue id orci rhoncus molestie. Nunc auctor
-                    dignissim lacus vel iaculis.</p>
+                  <p>Ventas de TDC en supermercados Dia Market</p>
                 </div>
               </div>
 
@@ -266,8 +265,8 @@
                 <div class="timeline-info">
                   <h3><span>Supervisor De Ventas</span><br>
                     <small>Pita Comercializadora, C.A.</small></h3>
-                  <p>Supervision de personal.
-                    Metricas.</p>
+                  <p>Supervision de personal. Lider de equipo. Metricas y
+                    estadisticas. Coach. Reuniciones diarias y mensual.</p>
                 </div>
               </div>
 
